# httpx-transport-rs

./: .gitignore  Cargo.toml  DESIGN.md  README.md  build.py  pyproject.toml
benchmarks/: benchmark.md  benchmark.py  server.go
benchmarks/rust-client/: Cargo.toml
benchmarks/rust-client/src/: main.rs
examples/: basic_usage.py
python/rust_httpx/: __init__.py
src/: client.rs  errors.rs  lib.rs  streaming.rs  transport.rs  utils.rs
tests/: test_local_http_server.py  test_transport.py
