[package]
name = "rust_httpx"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust transport for Python httpx"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/httpx-transport-rs"

[lib]
name = "rust_httpx"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py38"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "cookies", "http2", "stream", "blocking"] }
reqwest-middleware = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "timeout"] }
tower-retry = "0.3"
tokio = { version = "1.38", features = ["rt-multi-thread", "macros", "net", "time"] }
once_cell = "1.19"
bytes = "1.6"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
http = "1.0"
url = "2.5"
mime = "0.3"
anyhow = "1.0"
thiserror = "1.0"

# Optional dependencies for performance
mimalloc = { version = "0.1", optional = true }

[features]
default = ["rustls"]
native-tls = ["reqwest/native-tls", "reqwest/native-tls-alpn"]
rustls = ["reqwest/rustls-tls"]
mimalloc = ["dep:mimalloc"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort" 